@@ -369,10 +369,6 @@ class BTreeFolder2Base(Persistent):
         else:
             return set.keys()
 
-    security.declareProtected(access_contents_information, 'keys')
-    def keys(self):
-        return self._tree.keys()
-
     def __contains__(self, name):
         return name in self._tree
 
@@ -386,10 +382,6 @@ class BTreeFolder2Base(Persistent):
         # match 'spec'.
         return LazyMap(self._getOb, self.objectIds(spec))
 
-    security.declareProtected(access_contents_information, 'values')
-    def values(self):
-        return LazyMap(self._getOb, self._tree.keys())
-
     security.declareProtected(access_contents_information, 'objectItems')
     def objectItems(self, spec=None):
         # Returns a list of (id, subobject) tuples of the current object.
@@ -398,10 +390,11 @@ class BTreeFolder2Base(Persistent):
         return LazyMap(lambda id, _getOb=self._getOb: (id, _getOb(id)),
                        self.objectIds(spec))
 
-    security.declareProtected(access_contents_information, 'items')
-    def items(self):
-        return LazyMap(lambda id, _getOb=self._getOb: (id, _getOb(id)),
-                       self._tree.keys())
+    security.declareProtected(
+        access_contents_information, 'keys', 'items', 'values')
+    keys = objectIds
+    values = objectValues
+    items = objectItems
 
     security.declareProtected(access_contents_information, 'objectMap')
     def objectMap(self):
